adjusted z-index. The pinterest button was floating over the hamburger menu dropdown. Fixed.

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -27,6 +27,6 @@ body {
     position: absolute;
     top: 25px;
     right: 40px;
-    z-index: 10; 
+    z-index: 1; 
     box-shadow: 3px 3px 5px rgba(0,0,0,.6);
   }
